Feature/yo graphic robot (#175)
Adds a yoGraphic robot that allows to visualize the state of a robot (given a URDF model) and the yoVariables that store the state.